<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddEditSnipActivity">

    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_subject"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_content"
        android:inputType="textMultiLine"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_priority"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <NumberPicker
        android:id="@+id/number_picker_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>